--- a/ui/style.css
+++ b/ui/style.css
@@ -19,4 +19,13 @@ body {
 .img-medium {
     height: 200px;
 }
+.container {
+    max-width: 800px;
+    margin: 0 auto;
+    color: #1c0077;
+    font-family: san-serif;
+    padding-top: 80px;
+    padding-left: 40px;
+    padding-right: 40px;
+}    
 
